Fixex home button on small screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,9 +231,9 @@ header .btn:hover{
 }
 
 #menubar-nav li:first-child{
-    border-left: 5px solid yellowgreen;
-    border-right: 5px solid transparent;
-    margin-left: -15px;
+    border-left: 2px solid yellowgreen;
+    border-right: 2px solid transparent;
+    margin-left: -13px;
     padding-left: 10px;
 }
 
